# live-trans

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  start.bat
.github/workflows/: lint.yml  release.yml
livetrans/: config.py  main.py  pipeline.py
livetrans/asr/: base.py  whisper_cloud.py  whisper_local.py
livetrans/audio/: capture.py  process_capture.py  vad.py
livetrans/translate/: base.py  openai_compat.py
livetrans/ui/: settings_dialog.py  subtitle_window.py  tray.py
scripts/: create_shortcut.ps1  test_asr.py  test_capture.py  test_process_capture.py  test_translate.py  test_vad.py
