[project]
name = "livetrans"
version = "0.1.0"
description = "实时直播翻译：捕获系统音频，本地/云端语音识别 + 翻译，悬浮窗双语字幕"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MisterRabbit0w0" }]
keywords = ["translation", "live", "subtitle", "whisper", "asr", "streaming"]
classifiers = [
    "Environment :: Win32 (MS Windows)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "PyAudioWPatch>=0.2.12.7",
    "faster-whisper>=1.1.0",
    "PySide6>=6.7",
    "httpx>=0.27",
    "onnxruntime>=1.18",
    "pycaw>=20230407",
]

[project.optional-dependencies]
cuda = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12>=9",
]

[project.urls]
Homepage = "https://github.com/MisterRabbit0w0/live-trans"
Repository = "https://github.com/MisterRabbit0w0/live-trans"

[project.scripts]
livetrans = "livetrans.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["livetrans*"]

[tool.setuptools.package-data]
livetrans = ["assets/*.onnx"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["B008"]  # 允许在默认参数中调用（Qt 信号等场景）
